Make user able to search movies
