# movie-service/src/routes/search-movies/types/query-params.type.ts
@@ -1,0 +1,4 @@
+import { MovieServiceOpenapi } from 'shared';
+
+export type QueryParamsType =
+  MovieServiceOpenapi.paths['/api/movie-service/search-movies']['get']['parameters']['query'];
